NXP-8009: upgrade to JAX-WS 2.2